gatewayApi/resources/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: waypoint
  namespace: argocd
  annotations:
    argocd.argoproj.io/sync-wave: "10"
  labels:
    istio.io/waypoint-for: service
spec:
  gatewayClassName: istio-waypoint
  infrastructure:
    parametersRef:
      kind: ConfigMap
      name: gateway-options
      group: ""
  listeners:
    - name: mesh
      port: 15008
      protocol: HBONE
...
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: external
  namespace: argocd
  annotations:
    argocd.argoproj.io/sync-wave: "10"
    metallb.io/loadBalancerIPs: 192.168.20.80
  labels:
    istio.io/waypoint-for: service
spec:
  gatewayClassName: istio
  infrastructure:
    parametersRef:
      kind: ConfigMap
      name: gateway-options
      group: ""
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: Same
      tls:
        mode: Terminate
        certificateRefs:
          - name: argocd-gateway-tls-termination
            namespace: argocd
...
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: waypoint
  namespace: default
  annotations:
    argocd.argoproj.io/sync-wave: "10"
  labels:
    istio.io/waypoint-for: service
spec:
  gatewayClassName: istio-waypoint
  infrastructure:
    parametersRef:
      kind: ConfigMap
      name: gateway-options
      group: ""
  listeners:
    - name: mesh
      port: 15008
      protocol: HBONE
...
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: waypoint
  namespace: longhorn-system
  annotations:
    argocd.argoproj.io/sync-wave: "10"
  labels:
    istio.io/waypoint-for: service
spec:
  gatewayClassName: istio-waypoint
  infrastructure:
    parametersRef:
      kind: ConfigMap
      name: gateway-options
      group: ""
  listeners:
    - name: mesh
      port: 15008
      protocol: HBONE
...
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: external
  namespace: longhorn-system
  annotations:
    argocd.argoproj.io/sync-wave: "10"
    metallb.io/loadBalancerIPs: 192.168.20.81
  labels:
    istio.io/waypoint-for: service
spec:
  gatewayClassName: istio
  infrastructure:
    parametersRef:
      kind: ConfigMap
      name: gateway-options
      group: ""
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: Same
      tls:
        mode: Terminate
        certificateRefs:
          - name: longhorn-system-gateway-tls-termination
            namespace: longhorn-system
...
