gatewayApi/resources/gatewayHuntInternalProductionLab.yaml
# https://gateway-api.sigs.k8s.io/api-types/gateway/
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: hunt-internal-production-lab
  namespace: gateway-api
spec:
  gatewayClassName: gateway-class
  addresses:
    - type: IPAddress
      value: 192.168.20.82
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: hunt-internal-production-lab-tls-termination-secret
            namespace: gateway-api
